[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "qiuwenbot"
dynamic = ["version"]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = [
  'bs4',
  'pywikibot',
  'requests',
  'zhconv',
  'cn2an',
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-cov',
]

[tool.setuptools_scm]
