[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "qiuwenbot"
dynamic = ["version"]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = [
  'bs4',
  'pywikibot>=8',
  'requests',
  'zhconv',
  'cn2an',
  'tqdm',
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-cov',
]

[project.scripts]
qiuwenbot = "qiuwenbot.__main__:main"

[tool.setuptools_scm]

[tool.ruff]
target-version = "py37"

select = [
    "E", # errors
    "F", # pyflakes
    "D", # pydocstyle
    "I", # isort
    "UP", # pyupgrade
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long
    "E741", # ambiguous variable name
    "E402", # module level import not at top of file
    "D413", # missing blank line after last section
    "D416", # section name should end with a colon
    "D203", # 1 blank line required before class docstring
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
    "D107", # missing docstring in __init__
    "D213", # multi-line docstring summary should start at the second line
    "D205", # 1 blank line required between summary line and description
]
